fix: resolve Docker build issue and ESLint warnings
- Fix dockerignore excluding src/components/build folder
- Disable React Refresh warnings for test files
- Docker build now completes successfully

--- a/.dockerignore
+++ b/.dockerignore
@@ -22,7 +22,7 @@ LICENSE
 
 # Build outputs
 **/dist/
-**/build/
+# **/build/ - Commented out because we have a src/components/build folder
 **/.next/
 **/.turbo/
 **/.vite/
