build: transition from alpha to stable release mode
Updates Release Please configuration to use stable semantic versioning instead of alpha prereleases.

docs: update RELEASE.md with prerelease mode documentation
  Explains how to enable/disable prerelease mode for future use.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,11 +4,9 @@
     ".": {
       "release-type": "simple",
       "version-file": "VERSION",
-      "prerelease": true,
-      "prerelease-type": "alpha",
-      "versioning": "prerelease",
+      "prerelease": false,
       "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": false,
       "include-v-in-tag": true,
       "changelog-path": "CHANGELOG.md",
       "extra-files": [
