chore: organize release please config in .github directory
- Move release-config.json and release-manifest.json to .github/
- Rename VERSION to version.txt for consistency
- Update workflow to reference new config locations
- Simplify config by removing explicit default settings
- Update RELEASE.md to reflect current structure

docs: update release documentation to focus on current state
  Remove historical references and deprecated config options

--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -3,12 +3,6 @@
   "packages": {
     ".": {
       "release-type": "simple",
-      "version-file": "VERSION",
-      "prerelease": false,
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": false,
-      "include-v-in-tag": true,
-      "changelog-path": "CHANGELOG.md",
       "extra-files": [
         {
           "type": "json",
@@ -26,7 +20,7 @@
     },
     {
       "type": "fix",
-      "section": "Bug Fixes",
+      "section": "Fixes",
       "hidden": false
     },
     {
@@ -51,7 +45,7 @@
     },
     {
       "type": "refactor",
-      "section": "Code Refactoring",
+      "section": "Refactoring",
       "hidden": false
     },
     {
