--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,5 +18,5 @@ jobs:
         id: release
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-          config-file: release-please-config.json
-          manifest-file: .release-please-manifest.json
+          config-file: ".github/release-config.json"
+          manifest-file: ".github/release-manifest.json"
