refactor: implement self-hosted analytics proxy
Adds YARP reverse proxy to serve analytics scripts through the application's
own domain for improved privacy and reliability.

refactor: reorganize documentation files
  Moved README.md to repository root for better visibility.
  Removed outdated PROJECT_STATUS.md.

style: enhance new version notice visibility
  Added shadow to improve visual prominence of the notice.

docs: simplify development workflow instructions
  Streamlined check command documentation in CLAUDE.md.

--- a/apps/api/TrendWeight/appsettings.json
+++ b/apps/api/TrendWeight/appsettings.json
@@ -23,5 +23,33 @@
     "ServiceKey": "paste-your-service-role-key-here",
     "JwtSecret": "paste-your-jwt-secret-here"
   },
-  "LegacyDbConnectionString": ""
+  "LegacyDbConnectionString": "",
+  "ReverseProxy": {
+    "Routes": {
+      "plausible-script": {
+        "ClusterId": "plausible",
+        "Match": {
+          "Path": "/js/script.js"
+        },
+        "Transforms": [
+          { "PathSet": "/js/script.outbound-links.js" }
+        ]
+      },
+      "plausible-event": {
+        "ClusterId": "plausible",
+        "Match": {
+          "Path": "/api/event"
+        }
+      }
+    },
+    "Clusters": {
+      "plausible": {
+        "Destinations": {
+          "plausible": {
+            "Address": "https://plausible.io"
+          }
+        }
+      }
+    }
+  }
 }
