--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: CI/CD
 
 on:
   push:
-    branches: [ "*" ]
-    tags: [ "v*" ]
+    branches: ["*"]
+    tags: ["v*"]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   REGISTRY: ghcr.io
@@ -17,59 +17,43 @@ jobs:
   checks:
     name: Build and Test
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-        cache: 'npm'
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '9.0.x'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Setup Turbo Remote Cache
-      if: github.event_name != 'pull_request'
-      env:
-        TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-        TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-      run: |
-        if [ -n "$TURBO_TOKEN" ] && [ -n "$TURBO_TEAM" ]; then
-          echo "TURBO_TOKEN=$TURBO_TOKEN" >> $GITHUB_ENV
-          echo "TURBO_TEAM=$TURBO_TEAM" >> $GITHUB_ENV
-        fi
-    
-    - name: Check formatting
-      run: npm run check:ci
-    
-    - name: Build
-      run: npm run build
-    
-    - name: Test
-      run: npm test
-    
-    - name: Test Coverage (Frontend)
-      working-directory: apps/web
-      run: npm run test:coverage
-    
-    - name: Upload frontend coverage
-      uses: actions/upload-artifact@v4
-      with:
-        name: frontend-coverage
-        path: apps/web/coverage/
-    
-    - name: Upload backend coverage
-      uses: actions/upload-artifact@v4
-      with:
-        name: backend-coverage
-        path: apps/api/**/coverage.cobertura.xml
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "9.0.x"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Setup Turbo Remote Cache
+        if: github.event_name != 'pull_request'
+        env:
+          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+          TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+        run: |
+          if [ -n "$TURBO_TOKEN" ] && [ -n "$TURBO_TEAM" ]; then
+            echo "TURBO_TOKEN=$TURBO_TOKEN" >> $GITHUB_ENV
+            echo "TURBO_TEAM=$TURBO_TEAM" >> $GITHUB_ENV
+          fi
+
+      - name: Lint / Typecheck
+        run: npm run check:ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Test
+        run: npm test
 
   docker-build:
     name: Docker Build
@@ -78,83 +62,83 @@ jobs:
     permissions:
       contents: read
       packages: write
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Log in to GitHub Container Registry
-      if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Log in to DigitalOcean Container Registry
-      if: startsWith(github.ref, 'refs/tags/v')
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.DO_REGISTRY }}
-        username: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-        password: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-    
-    - name: Extract metadata for GitHub Registry
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=ref,event=tag
-          type=sha
-          type=raw,value=latest,enable={{is_default_branch}}
-          type=raw,value=latest-release,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-    
-    - name: Extract metadata for DigitalOcean Registry
-      id: meta-do
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.DO_REGISTRY }}/${{ env.DO_IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=ref,event=tag
-          type=sha
-          type=raw,value=latest,enable={{is_default_branch}}
-          type=raw,value=latest-release,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-    
-    - name: Get version
-      id: version
-      run: |
-        if [[ $GITHUB_REF == refs/tags/* ]]; then
-          VERSION=${GITHUB_REF#refs/tags/}
-        else
-          VERSION="build-${{ github.run_number }}"
-        fi
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-    
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        push: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') }}
-        tags: |
-          ${{ steps.meta.outputs.tags }}
-          ${{ startsWith(github.ref, 'refs/tags/v') && steps.meta-do.outputs.tags || '' }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        build-args: |
-          VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}
-          VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}
-          VITE_APPLE_SERVICES_ID=${{ secrets.VITE_APPLE_SERVICES_ID }}
-          VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }}
-          BUILD_TIME=${{ github.event.head_commit.timestamp || github.event.repository.updated_at }}
-          BUILD_COMMIT=${{ github.sha }}
-          BUILD_BRANCH=${{ github.ref_name }}
-          BUILD_VERSION=${{ steps.version.outputs.version }}
-          BUILD_REPO=${{ github.repository }}
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Log in to DigitalOcean Container Registry
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.DO_REGISTRY }}
+          username: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          password: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Extract metadata for GitHub Registry
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=ref,event=tag
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest-release,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+
+      - name: Extract metadata for DigitalOcean Registry
+        id: meta-do
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DO_REGISTRY }}/${{ env.DO_IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=ref,event=tag
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest-release,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+
+      - name: Get version
+        id: version
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+          else
+            VERSION="build-${{ github.run_number }}"
+          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            ${{ startsWith(github.ref, 'refs/tags/v') && steps.meta-do.outputs.tags || '' }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}
+            VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}
+            VITE_APPLE_SERVICES_ID=${{ secrets.VITE_APPLE_SERVICES_ID }}
+            VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }}
+            BUILD_TIME=${{ github.event.head_commit.timestamp || github.event.repository.updated_at }}
+            BUILD_COMMIT=${{ github.sha }}
+            BUILD_BRANCH=${{ github.ref_name }}
+            BUILD_VERSION=${{ steps.version.outputs.version }}
+            BUILD_REPO=${{ github.repository }}
