--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -1,24 +1,15 @@
 name: Update Contributors
 on: workflow_dispatch # manual button
-permissions:
-  contents: write
-  pull-requests: write
 
 jobs:
-  preview:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Generate table
-        id: generate
-        uses: akhilmhdh/contributors-readme-action@v2.3.10
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        continue-on-error: true # don’t mark job failed
-
-      - name: Show diff
-        if: always()
-        run: |
-          echo '--------- README diff ---------'
-          git --no-pager diff README.md || true
+    contrib-readme-job:
+        runs-on: ubuntu-latest
+        name: A job to automate contrib in readme
+        permissions:
+          contents: write
+          pull-requests: write
+        steps:
+            - name: Contribute List
+              uses: akhilmhdh/contributors-readme-action@v2.3.10
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
