ci: update contributors workflow to trigger on push to main

--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -1,15 +1,18 @@
 name: Update Contributors
-on: workflow_dispatch # manual button
+on:
+  push:
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
-    contrib-readme-job:
-        runs-on: ubuntu-latest
-        name: A job to automate contrib in readme
-        permissions:
-          contents: write
-          pull-requests: write
-        steps:
-            - name: Contribute List
-              uses: akhilmhdh/contributors-readme-action@v2.3.10
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  contrib-readme-job:
+    runs-on: ubuntu-latest
+    name: Update Contributors
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - name: Contribute List
+        uses: akhilmhdh/contributors-readme-action@v2.3.10
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
