ci: update commit message for contrib-readme-action step

--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -16,5 +16,6 @@ jobs:
         uses: akhilmhdh/contributors-readme-action@v2.3.10
         with:
           auto_detect_branch_protection: false
+          commit_message: "chore(contributor): contrib-readme-action has updated readme"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
