--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@bprogress/react": "1.2.7",
+    "@clerk/clerk-react": "5.37.0",
     "@fontsource/zilla-slab": "5.2.6",
     "@js-joda/core": "5.6.5",
     "@js-joda/timezone": "2.22.0",
