--- a/apps/api/TrendWeight/appsettings.json
+++ b/apps/api/TrendWeight/appsettings.json
@@ -23,6 +23,9 @@
     "ServiceKey": "paste-your-service-role-key-here",
     "JwtSecret": "paste-your-jwt-secret-here"
   },
+  "Clerk": {
+    "JwksUrl": "https://polite-bat-16.clerk.accounts.dev/.well-known/jwks.json"
+  },
   "LegacyDbConnectionString": "",
   "ReverseProxy": {
     "Routes": {
@@ -32,7 +35,9 @@
           "Path": "/js/script.js"
         },
         "Transforms": [
-          { "PathSet": "/js/script.outbound-links.js" }
+          {
+            "PathSet": "/js/script.outbound-links.js"
+          }
         ]
       },
       "plausible-event": {
