feat(auth): complete Clerk authentication migration
- Update account deletion to handle both Clerk and Supabase accounts
- Remove foreign key from profiles to auth.users table
- Add ClerkService for user deletion via Clerk API
- Fix redirect issues after account deletion and OAuth sign-in
- Update ProfileController to work with all Clerk users
- Add comprehensive logging for debugging auth flows
- Update tests to handle new auth flow

--- a/apps/api/TrendWeight/appsettings.json
+++ b/apps/api/TrendWeight/appsettings.json
@@ -24,7 +24,8 @@
     "JwtSecret": "paste-your-jwt-secret-here"
   },
   "Clerk": {
-    "JwksUrl": "https://polite-bat-16.clerk.accounts.dev/.well-known/jwks.json"
+    "JwksUrl": "https://polite-bat-16.clerk.accounts.dev/.well-known/jwks.json",
+    "SecretKey": "your-clerk-secret-key"
   },
   "LegacyDbConnectionString": "",
   "ReverseProxy": {
