test(auth): add comprehensive tests for Clerk authentication
- Add ClerkTokenServiceTests with 9 test cases covering token validation, issuer validation, expiration, azp claims, and JWKS caching
- Add ClerkAuthenticationHandlerTests with 7 test cases covering authentication flow, claim mapping, and error handling
- Ensure proper JWT claim mapping (sub -> NameIdentifier, email -> Email)
- Fix test token creation to handle NotBefore/Expires correctly
- All 302 tests now passing

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ Supabase__ServiceKey=your-supabase-service-role-key
 
 # Authentication
 Clerk__SecretKey=your-clerk-secret-key
-Clerk__JwksUrl=your-clerk-jwks-url
+Clerk__Authority=https://your-instance.clerk.accounts.dev
 Jwt__SigningKey=your-random-signing-key-at-least-32-chars
 
 # OAuth Provider Configuration
