--- a/apps/api/TrendWeight/appsettings.json
+++ b/apps/api/TrendWeight/appsettings.json
@@ -24,7 +24,7 @@
     "JwtSecret": "paste-your-jwt-secret-here"
   },
   "Clerk": {
-    "JwksUrl": "https://polite-bat-16.clerk.accounts.dev/.well-known/jwks.json",
+    "Authority": "https://your-instance.clerk.accounts.dev",
     "SecretKey": "your-clerk-secret-key"
   },
   "LegacyDbConnectionString": "",
