feat: migrate authentication from Supabase Auth to Clerk (#291)
This major update replaces Supabase Auth with Clerk for user authentication while 
maintaining Supabase for database operations. The migration preserves all existing 
user data through a new ID mapping system, ensuring seamless continuity for users.

Changes:
- Replace Supabase Auth with Clerk SDK for frontend authentication
- Implement Clerk JWT validation in ASP.NET Core backend
- Add user_accounts table for mapping Clerk user IDs to internal GUIDs
- Update all auth-dependent components to use new Clerk-based auth hooks
- Remove legacy authentication code (OTP, Apple callbacks, Supabase auth)

Technical details:
- Frontend: Clerk React SDK with custom useAuth hook
- Backend: ClerkAuthenticationHandler with JWT validation
- Database: New user_accounts mapping table preserves data integrity
- All existing OAuth providers supported (Google, Microsoft, Apple, Email)
- Backwards compatible - existing users can sign in with same credentials

Documentation:
- Add comprehensive Clerk configuration guide
- Update architecture docs with new auth flow
- Include deployment checklist for production migration
- Add tests for all new authentication components

All existing user data remains intact. Users authenticate through Clerk's secure
UI components while maintaining access to their historical weight tracking data.

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,13 @@
 # Frontend build-time variables
-VITE_SUPABASE_URL=https://your-project-ref.supabase.co
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
-VITE_APPLE_SERVICES_ID=your-apple-services-id
-VITE_TURNSTILE_SITE_KEY=your-turnstile-site-key
+VITE_CLERK_PUBLISHABLE_KEY=your-clerk-publishable-key
 
 # Backend runtime variables
 Supabase__Url=https://your-project-ref.supabase.co
-Supabase__AnonKey=your-supabase-anon-key
 Supabase__ServiceKey=your-supabase-service-role-key
-Supabase__JwtSecret=your-supabase-jwt-secret
 
 # Authentication
+Clerk__SecretKey=your-clerk-secret-key
+Clerk__Authority=https://your-instance.clerk.accounts.dev
 Jwt__SigningKey=your-random-signing-key-at-least-32-chars
 
 # OAuth Provider Configuration
