--- a/apps/api/TrendWeight/appsettings.json
+++ b/apps/api/TrendWeight/appsettings.json
@@ -23,6 +23,10 @@
     "ServiceKey": "paste-your-service-role-key-here",
     "JwtSecret": "paste-your-jwt-secret-here"
   },
+  "Clerk": {
+    "Authority": "https://your-instance.clerk.accounts.dev",
+    "SecretKey": "your-clerk-secret-key"
+  },
   "LegacyDbConnectionString": "",
   "ReverseProxy": {
     "Routes": {
@@ -32,7 +36,9 @@
           "Path": "/js/script.js"
         },
         "Transforms": [
-          { "PathSet": "/js/script.outbound-links.js" }
+          {
+            "PathSet": "/js/script.outbound-links.js"
+          }
         ]
       },
       "plausible-event": {
