--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@bprogress/react": "1.2.7",
+    "@clerk/clerk-react": "5.37.0",
     "@fontsource/zilla-slab": "5.2.6",
     "@js-joda/core": "5.6.5",
     "@js-joda/timezone": "2.22.0",
@@ -31,7 +32,6 @@
     "@radix-ui/react-toast": "1.2.14",
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/themes": "3.2.1",
-    "@supabase/supabase-js": "2.52.1",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/typography": "0.5.16",
     "@tailwindcss/vite": "4.1.11",
