refactor(config): remove unused Supabase AnonKey and JwtSecret
- Remove AnonKey and JwtSecret properties from SupabaseConfig
- Update all configuration files (appsettings.json, docker-run.sh)
- Add missing Clerk configuration to development settings
- Add trailing slash redirect functionality to SPA fallback handler
- Fix incomplete appsettings.Development.json.example configuration

--- a/apps/api/TrendWeight/appsettings.Development.json.example
+++ b/apps/api/TrendWeight/appsettings.Development.json.example
@@ -18,8 +18,11 @@
   },
   "Supabase": {
     "Url": "https://your-project-id.supabase.co",
-    "AnonKey": "paste-your-anon-key-here",
-    "ServiceKey": "paste-your-service-role-key-here",
-    "JwtSecret": "paste-your-jwt-secret-here"
-  }
+    "ServiceKey": "paste-your-service-role-key-here"
+  },
+  "Clerk": {
+    "Authority": "https://your-instance.clerk.accounts.dev",
+    "SecretKey": "your-clerk-secret-key"
+  },
+  "LegacyDbConnectionString": ""
 }
