--- a/apps/api/TrendWeight/appsettings.json
+++ b/apps/api/TrendWeight/appsettings.json
@@ -19,9 +19,7 @@
   },
   "Supabase": {
     "Url": "https://your-project-id.supabase.co",
-    "AnonKey": "paste-your-anon-key-here",
-    "ServiceKey": "paste-your-service-role-key-here",
-    "JwtSecret": "paste-your-jwt-secret-here"
+    "ServiceKey": "paste-your-service-role-key-here"
   },
   "Clerk": {
     "Authority": "https://your-instance.clerk.accounts.dev",
