--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,10 +39,12 @@
     "@tanstack/react-query-devtools": "5.84.0",
     "@tanstack/react-router": "1.130.9",
     "@vvo/tzdb": "6.179.0",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "highcharts": "12.3.0",
     "highcharts-react-official": "3.2.2",
     "katex": "0.16.22",
+    "lucide-react": "0.536.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "7.61.1",
@@ -78,6 +80,7 @@
     "msw": "2.10.4",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
+    "tw-animate-css": "1.3.6",
     "typescript": "5.9.2",
     "typescript-eslint": "8.38.0",
     "vite": "7.0.6",
