--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-icons": "1.3.2",
     "@radix-ui/react-radio-group": "1.3.7",
+    "@radix-ui/react-select": "2.2.5",
+    "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-switch": "1.2.5",
     "@radix-ui/react-toast": "1.2.14",
     "@radix-ui/react-toggle-group": "1.1.10",
@@ -50,7 +52,6 @@
     "react-hook-form": "7.61.1",
     "react-icons": "5.5.0",
     "react-markdown": "10.1.0",
-    "react-select": "5.10.2",
     "rehype-katex": "7.0.1",
     "remark-gfm": "4.0.1",
     "remark-math": "6.0.0",
