--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-switch": "1.2.5",
     "@radix-ui/react-toast": "1.2.14",
+    "@radix-ui/react-toggle": "1.1.9",
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/themes": "3.2.1",
     "@tailwindcss/postcss": "4.1.11",
@@ -40,6 +41,7 @@
     "@tanstack/react-query": "5.84.0",
     "@tanstack/react-query-devtools": "5.84.0",
     "@tanstack/react-router": "1.130.9",
+    "@tanstack/react-table": "8.21.3",
     "@vvo/tzdb": "6.179.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
