chore: clean up package dependencies
- Remove unused packages: next-themes, @vvo/tzdb, @marsidev/react-turnstile
- Move @clerk/themes from root to apps/web where it's actually used

--- a/package.json
+++ b/package.json
@@ -30,8 +30,5 @@
     "lint-staged": "16.1.2",
     "turbo": "2.5.5"
   },
-  "version": "2.0.0-alpha.1",
-  "dependencies": {
-    "@clerk/themes": "2.4.5"
-  }
+  "version": "2.0.0-alpha.1"
 }
