--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,10 +21,10 @@
   "dependencies": {
     "@bprogress/react": "1.2.7",
     "@clerk/clerk-react": "5.38.1",
+    "@clerk/themes": "2.4.5",
     "@fontsource/zilla-slab": "5.2.6",
     "@js-joda/core": "5.6.5",
     "@js-joda/timezone": "2.22.0",
-    "@marsidev/react-turnstile": "1.1.0",
     "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-select": "2.2.5",
@@ -39,14 +39,12 @@
     "@tanstack/react-query-devtools": "5.84.0",
     "@tanstack/react-router": "1.130.9",
     "@tanstack/react-table": "8.21.3",
-    "@vvo/tzdb": "6.179.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "highcharts": "12.3.0",
     "highcharts-react-official": "3.2.2",
     "katex": "0.16.22",
     "lucide-react": "0.536.0",
-    "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "7.61.1",
