--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "lint-staged": "16.1.2",
     "turbo": "2.5.5"
   },
-  "version": "2.0.0-alpha.1"
+  "version": "2.0.0-alpha.1",
+  "dependencies": {
+    "@supabase/supabase-js": "2.54.0"
+  }
 }
