--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # Frontend build-time variables
 VITE_CLERK_PUBLISHABLE_KEY=your-clerk-publishable-key
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # Backend runtime variables
 Supabase__Url=https://your-project-ref.supabase.co
+Supabase__AnonKey=your-supabase-anon-key
 Supabase__ServiceKey=your-supabase-service-role-key
 
 # Authentication
