perf: optimize SourceDataService with request-scoped caching
Add thread-safe in-memory caching to eliminate redundant database reads
during measurement sync operations.

Key improvements:
- Cache DbSourceData using ConcurrentDictionary per HTTP request
- Reduce database operations from 4-5 to 1-2 per sync
- Encapsulate cache operations with helper methods
- Bulk fetch uncached providers in single query
- Maintain thread safety for concurrent provider syncing

Performance impact:
- GetLastSyncTimeAsync: cache hit after first call
- GetSourceDataAsync: cache hit for synced providers
- UpdateSourceDataAsync: updates cache on write
- All cache operations properly cleaned up

This eliminates the inefficient pattern where sync operations
would repeatedly read the same source data from the database.

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ context_portal/
 .chunkhound
 .spec-workflow/session.json
 .spec-workflow/approvals
+apps/api/TrendWeight/appsettings.Development.json
