chore: ai docs changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,6 @@
   "dotnet.defaultSolution": "apps/api/TrendWeight.sln",
   "dotrush.roslyn.projectOrSolutionFiles": [
     "/Users/erv/development/trendweight/apps/api/TrendWeight.sln"
-  ]
+  ],
+  "chatgpt.openOnStartup": true
 }
