--- a/apps/api/TrendWeight/TrendWeight.csproj
+++ b/apps/api/TrendWeight/TrendWeight.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Supabase" Version="1.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
+    <PackageReference Include="TimeZoneConverter" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
