chore: add Code Expert agent for comprehensive code analysis and update ChunkHound configuration

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ context_portal/
 .spec-workflow/session.json
 .spec-workflow/approvals
 apps/api/TrendWeight/appsettings.Development.json
+.chunkhound
+.chunkhound.json
